crates/compiler/cypress/tests/snapshots/test_parse__empty_hosted_header_header.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "hosted Foo exposes [] imports [] generates Bar with []\n\n"
---
(BeginFile
    (BeginHeaderHosted
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderHosted)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

