crates/compiler/cypress/tests/snapshots/test_parse__empty_interface_header_header_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "interface Foo exposes [] imports []\n\n"
---
(BeginFile
    (BeginHeaderInterface
        ModuleName=>UpperIdent@1
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderInterface)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

