crates/compiler/cypress/tests/snapshots/test_parse__empty_package_header_header.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "package \"rtfeldman/blah\" exposes [] packages {}\n"
---
(BeginFile
    (BeginHeaderPackage
        String=>String@1
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderPackage)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

