crates/compiler/cypress/tests/snapshots/test_parse__empty_record_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "{}\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (BeginRecord EndRecord) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Record([])

[=== formatted below ===]

