crates/compiler/cypress/tests/snapshots/test_parse__empty_record_update_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "{e&}\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginRecordUpdate
            Ident=>LowerIdent@1
            InlineRecordUpdateAmpersand=>OpAmpersand@2
        EndRecordUpdate)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
RecordUpdate([Ident("e")])

[=== formatted below ===]

