crates/compiler/cypress/tests/snapshots/test_parse__empty_string_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\"\"\n\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("\"\"")

[=== formatted below ===]

